adds build command and updates test html file

--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Typography Baseline</title>
-	<link rel="stylesheet" href="src/baseline.css">
+	<link rel="stylesheet" href="build/baseline.css">
 </head>
 <body>
 <section>
